spacing issues

--- a/project/jobfuse/scss/home.scss
+++ b/project/jobfuse/scss/home.scss
@@ -140,3 +140,10 @@
 	}
 
 }
+
+@media #{$medium-only} { 
+
+	#content {
+	    padding-bottom: 200px;
+	  }
+}
