--- a/project/jobfuse/scss/search.scss
+++ b/project/jobfuse/scss/search.scss
@@ -256,6 +256,10 @@ header {
 		.button {
 			margin: 0 0 30px 0;
 		}
+
+		.large-2 {
+			padding-left: 0;
+		}
 	}
 
 	#result-filter {
@@ -325,6 +329,10 @@ header {
 
 		.button {
 			margin: 0 0 30px 0;
+		}
+
+		.large-2 {
+			padding-left: 0;
 		}
 	}
 
